# agenctic_system

./: README.md  help_output.txt  pyproject.toml
UI/: streamlit_app.py
app/agent/: builder.py  config.py  runner.py  tools.py
app/api/: admin.py  deps.py  main.py
app/channels/core/: base_adapter.py
app/channels/telegram/: adapter.py
app/channels/web/: adapter.py
app/channels/whatsapp/: adapter.py
app/config/: settings.py
app/llm/: base.py  groq_provider.py  manager.py  ollama_provider.py  openai_provider.py
app/memory/: controller.py
app/services/: lightrag.py
app/ui/: streamlit_app.py
config/: .env.example  config.ini
documentation/: GIT_PREP.md  tutorial-deploy.md
infra/: Dockerfile  docker-compose.prod.yml  docker-compose.yml
tests/: conftest.py  test_agent_flow.py  test_channel_adapters.py  test_llm_provider.py  test_memory.py  test_vectorstore.py
